--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 PRINTFUL_API_KEY=your_printful_api_key_here
 REPLICATE_API_TOKEN=your_replicate_api_token_here
+USE_LOCAL_AI=true
+COMFYUI_URL=http://localhost:8188
 HOST=0.0.0.0
 PORT=8000
