--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,10 @@ requests==2.31.0
 aiofiles==23.2.1
 jinja2==3.1.3
 replicate==1.0.7
+torch==2.1.2
+torchvision==0.16.2
+diffusers==0.25.0
+transformers==4.36.2
+accelerate==0.25.0
+safetensors==0.4.1
+xformers==0.0.23.post1
