Complete rebuild: Hunk of the Month AI Calendar Platform
- Implemented Flask application with guest session support
- Integrated Google Gemini 2.5 Flash Image API (Nano Banana)
- Created full user flow: upload, prompts, generation, preview
- Built responsive UI with Bootstrap 5
- Added database models for projects, images, and calendar months
- Configured for Railway deployment
- Mock checkout page (Stripe integration coming soon)
- 24-hour guest sessions with no account required

--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,78 @@
 # Python
-venv/
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
-*.egg-info/
-dist/
+venv/
+env/
+ENV/
 build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Flask
+instance/
+.webassets-cache
 
 # Environment
 .env
 key.txt
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+calendar.db
 
 # Uploads and output
 uploads/*
 !uploads/.gitkeep
 output/*
 !output/.gitkeep
+static/uploads/
 
 # Models
 models/*
 !models/.gitkeep
 !models/download_models.py
 
-# IDE
+# IDEs
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
 
 # OS
 .DS_Store
 Thumbs.db
+
+# Logs
+*.log
+
+# Temporary files
+tmp/
+temp/
+
+# Celery
+celerybeat-schedule
+celerybeat.pid
+
+# Migration
+migrations/versions/
+
+# Railway
+.railway/
