--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,26 @@
-PRINTFUL_API_KEY=your_printful_api_key_here
-REPLICATE_API_TOKEN=your_replicate_api_token_here
-USE_LOCAL_AI=true
-COMFYUI_URL=http://localhost:8188
+# Flask Configuration
+FLASK_APP=run.py
+FLASK_ENV=development
+FLASK_SECRET_KEY=your-secret-key-change-in-production
+
+# Database (Railway will provide this automatically)
+DATABASE_URL=postgresql://user:password@localhost:5432/calendar_db
+
+# Redis (Railway will provide this automatically)
+REDIS_URL=redis://localhost:6379/0
+
+# Google Gemini API (Nano Banana)
+GOOGLE_API_KEY=your-google-api-key-here
+
+# Application Settings
 HOST=0.0.0.0
-PORT=8000
+PORT=5000
+
+# Session Settings
+SESSION_COOKIE_SECURE=False
+SESSION_COOKIE_HTTPONLY=True
+SESSION_COOKIE_SAMESITE=Lax
+PERMANENT_SESSION_LIFETIME=86400
+
+# Guest Session Settings (24 hours in seconds)
+GUEST_SESSION_TIMEOUT=86400
