CRITICAL FIX: Upgrade Stripe from v7.8.0 to v13+ for checkout.Session API
ROOT CAUSE ANALYSIS:
- Local environment: Stripe 13.1.1 (working)
- Fly.io deployment: Stripe 7.8.0 (broken - no checkout.Session)
- Old Stripe v7.x doesn't have stripe.checkout.Session API
- Modern Stripe v13+ has the correct API

FIX:
- Updated requirements.txt: stripe>=13.0.0
- This will enable Stripe Checkout with Card/Apple Pay/PayPal
- Matches working local environment

TESTED:
- Local already uses v13.1.1 and works perfectly
- Deployment will rebuild with new Stripe version

--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ requests==2.31.0
 gunicorn==21.2.0
 
 # Payment Processing
-stripe==7.8.0
+stripe>=13.0.0  # Modern API with stripe.checkout.Session support
 
 # Date/Time
 python-dateutil==2.8.2
