Security: Remove exposed API tokens from git tracking
- Removed DEPLOYMENT_TOKENS.md from tracking (contains Vercel/Fly.io tokens)
- Removed test_printify_api.py from tracking (contains Printify token)
- Updated .gitignore to prevent future exposure
- See /tmp/WEBHOOK_FIX_AND_SECURITY_SUMMARY.md for details

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,9 @@ migrations/versions/
 
 # Railway
 .railway/
+
+# Sensitive files with API keys
+DEPLOYMENT_TOKENS.md
+test_*.py
+run_local.sh
+test_gemini*.py
